# spotify-api

./: Cargo.toml  README.md
src/: body.rs  lib.rs  objects.rs
src/api/: albums.rs  artists.rs  browse.rs  episodes.rs  follow.rs  library.rs  markets.rs  mod.rs  personalization.rs  player.rs  playlists.rs  search.rs  shows.rs  tracks.rs  users.rs
