[package]
name = "spotify-api"
version = "0.1.0"
authors = ["Akiacode <catry.me@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking", "json"]}
serde = { version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"